--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -15,6 +15,7 @@ body {
 .nav__list {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 70px;
 }
 
@@ -22,6 +23,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  align-items: center;
 }
 
 .navbar__heading {
@@ -31,4 +33,9 @@ body {
 
 .nav__item {
   list-style: none;
+  text-decoration: none;
+}
+
+.nav__user {
+  width: 50px;
 }
